--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="696781">  <td>24/02/28 23:19:44</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.ConfigureAppium()[pri:0, instance:com.MobileAppiumUT.TestCase.OS@6574a52c]">&gt;&gt;ConfigureAppium</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1250121181</td>   <td></td> </tr>
-<tr bgcolor="9d687a">  <td>24/02/28 23:19:54</td>   <td>10175</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OS.SendMsg()[pri:0, instance:com.MobileAppiumUT.TestCase.OS@6574a52c]">SendMsg</td> 
-  <td>main@1250121181</td>   <td></td> </tr>
-<tr bgcolor="696781">  <td>24/02/28 23:20:08</td>   <td>24819</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.MobileAppiumUT.TestCase.OS@6574a52c]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1250121181</td>   <td></td> </tr>
+<tr bgcolor="696781">  <td>24/02/29 00:08:19</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.ConfigureAppium()[pri:0, instance:com.MobileAppiumUT.TestCase.LongPress@1c7696c6]">&gt;&gt;ConfigureAppium</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@205721196</td>   <td></td> </tr>
 </table>
