--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,30 +1,28 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9d687a">  <td>24/02/28 23:28:22</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.ConfigureAppium()[pri:0, instance:com.MobileAppiumUT.TestCase.Animations@d86a6f]">&gt;&gt;ConfigureAppium</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1862383967</td>   <td></td> </tr>
-<tr bgcolor="9d687a">  <td>24/02/28 23:28:50</td>   <td>28232</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.MobileAppiumUT.TestCase.Animations@d86a6f]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1862383967</td>   <td></td> </tr>
-<tr bgcolor="9d687a">  <td>24/02/28 23:27:57</td>   <td>-25075</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.MobileAppiumUT.TestCase.OS@63376bed]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1862383967</td>   <td></td> </tr>
-<tr bgcolor="6d9386">  <td>24/02/28 23:28:07</td>   <td>-14925</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Preference.Wifi()[pri:0, instance:com.MobileAppiumUT.TestCase.Preference@4145bad8]">Wifi</td> 
-  <td>main@1862383967</td>   <td></td> </tr>
-<tr bgcolor="bfa075">  <td>24/02/28 23:27:57</td>   <td>-25103</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OS.SendMsg()[pri:0, instance:com.MobileAppiumUT.TestCase.OS@63376bed]">SendMsg</td> 
-  <td>main@1862383967</td>   <td></td> </tr>
-<tr bgcolor="bfa075">  <td>24/02/28 23:27:57</td>   <td>-25103</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OS.SendMsg()[pri:0, instance:com.MobileAppiumUT.TestCase.OS@63376bed]">SendMsg</td> 
-  <td>main@1862383967</td>   <td></td> </tr>
-<tr bgcolor="c8eb65">  <td>24/02/28 23:28:32</td>   <td>9828</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Animations.Hide()[pri:0, instance:com.MobileAppiumUT.TestCase.Animations@d86a6f]">Hide</td> 
-  <td>main@1862383967</td>   <td></td> </tr>
-<tr bgcolor="9d687a">  <td>24/02/28 23:28:22</td>   <td>-449</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.MobileAppiumUT.TestCase.Preference@4145bad8]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1862383967</td>   <td></td> </tr>
-<tr bgcolor="bfa075">  <td>24/02/28 23:27:57</td>   <td>-25103</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OS.SendMsg()[pri:0, instance:com.MobileAppiumUT.TestCase.OS@63376bed]">SendMsg</td> 
-  <td>main@1862383967</td>   <td></td> </tr>
-<tr bgcolor="9d687a">  <td>24/02/28 23:27:32</td>   <td>-50303</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.ConfigureAppium()[pri:0, instance:com.MobileAppiumUT.TestCase.OS@63376bed]">&gt;&gt;ConfigureAppium</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1862383967</td>   <td></td> </tr>
-<tr bgcolor="bfa075">  <td>24/02/28 23:27:57</td>   <td>-25103</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OS.SendMsg()[pri:0, instance:com.MobileAppiumUT.TestCase.OS@63376bed]">SendMsg</td> 
-  <td>main@1862383967</td>   <td></td> </tr>
-<tr bgcolor="bfa075">  <td>24/02/28 23:27:57</td>   <td>-25103</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OS.SendMsg()[pri:0, instance:com.MobileAppiumUT.TestCase.OS@63376bed]">SendMsg</td> 
-  <td>main@1862383967</td>   <td></td> </tr>
-<tr bgcolor="9d687a">  <td>24/02/28 23:27:57</td>   <td>-24544</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.ConfigureAppium()[pri:0, instance:com.MobileAppiumUT.TestCase.Preference@4145bad8]">&gt;&gt;ConfigureAppium</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1862383967</td>   <td></td> </tr>
+<tr bgcolor="9d687a">  <td>24/02/29 00:09:37</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.ConfigureAppium()[pri:0, instance:com.MobileAppiumUT.TestCase.LongPress@3646a422]">&gt;&gt;ConfigureAppium</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2052910813</td>   <td></td> </tr>
+<tr bgcolor="9d687a">  <td>24/02/29 00:10:19</td>   <td>41637</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.MobileAppiumUT.TestCase.Preference@750e2b97]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2052910813</td>   <td></td> </tr>
+<tr bgcolor="bfa075">  <td>24/02/29 00:09:22</td>   <td>-15156</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OS.SendMsg()[pri:0, instance:com.MobileAppiumUT.TestCase.OS@5ab956d7]">SendMsg</td> 
+  <td>main@2052910813</td>   <td></td> </tr>
+<tr bgcolor="6d9386">  <td>24/02/29 00:09:47</td>   <td>9804</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LongPress.longPressAction()[pri:0, instance:com.MobileAppiumUT.TestCase.LongPress@3646a422]">longPressAction</td> 
+  <td>main@2052910813</td>   <td></td> </tr>
+<tr bgcolor="9d687a">  <td>24/02/29 00:09:10</td>   <td>-27538</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.ConfigureAppium()[pri:0, instance:com.MobileAppiumUT.TestCase.OS@5ab956d7]">&gt;&gt;ConfigureAppium</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2052910813</td>   <td></td> </tr>
+<tr bgcolor="9d687a">  <td>24/02/29 00:10:20</td>   <td>42180</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.ConfigureAppium()[pri:0, instance:com.MobileAppiumUT.TestCase.Animations@3e27aa33]">&gt;&gt;ConfigureAppium</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2052910813</td>   <td></td> </tr>
+<tr bgcolor="9d687a">  <td>24/02/29 00:09:37</td>   <td>-406</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.MobileAppiumUT.TestCase.OS@5ab956d7]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2052910813</td>   <td></td> </tr>
+<tr bgcolor="9d687a">  <td>24/02/29 00:10:47</td>   <td>69905</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.MobileAppiumUT.TestCase.Animations@3e27aa33]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2052910813</td>   <td></td> </tr>
+<tr bgcolor="9d687a">  <td>24/02/29 00:09:53</td>   <td>15833</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:com.MobileAppiumUT.TestCase.LongPress@3646a422]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2052910813</td>   <td></td> </tr>
+<tr bgcolor="9d687a">  <td>24/02/29 00:09:54</td>   <td>16366</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.ConfigureAppium()[pri:0, instance:com.MobileAppiumUT.TestCase.Preference@750e2b97]">&gt;&gt;ConfigureAppium</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2052910813</td>   <td></td> </tr>
+<tr bgcolor="c8eb65">  <td>24/02/29 00:10:04</td>   <td>26860</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Preference.Wifi()[pri:0, instance:com.MobileAppiumUT.TestCase.Preference@750e2b97]">Wifi</td> 
+  <td>main@2052910813</td>   <td></td> </tr>
+<tr bgcolor="f176b8">  <td>24/02/29 00:10:29</td>   <td>51662</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Animations.Hide()[pri:0, instance:com.MobileAppiumUT.TestCase.Animations@3e27aa33]">Hide</td> 
+  <td>main@2052910813</td>   <td></td> </tr>
 </table>
